--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,8 +36,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:latest
-          target: scanservjs-core
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:staging
+          target: scanservjs-hplip
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
       - name: Get version
@@ -54,5 +54,5 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:release-${{ steps.get_version.outputs.VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:${{ steps.get_version.outputs.VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:latest
-          target: scanservjs-core
+          target: scanservjs-hplip
           platforms: linux/amd64,linux/arm64,linux/arm/v7
