--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:staging
-          target: scanservjs-core
+          target: scanservjs-hplip
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
       - name: Get version
@@ -50,8 +50,8 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:release-${{ steps.get_version.outputs.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:${{ steps.get_version.outputs.VERSION }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:release-${{ steps.get_version.outputs.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:${{ steps.get_version.outputs.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:latest
           target: scanservjs-core
           platforms: linux/amd64,linux/arm64,linux/arm/v7
