--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs:staging
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:staging
           target: scanservjs-hplip
           platforms: linux/amd64,linux/arm64,linux/arm/v7
 
@@ -53,5 +53,5 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:release-${{ steps.get_version.outputs.VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:${{ steps.get_version.outputs.VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/scanservjs-hplip:latest
-          target: scanservjs-core
+          target: scanservjs-hplip
           platforms: linux/amd64,linux/arm64,linux/arm/v7
